# recsys-package

./: .gitignore  LICENSE  README.md  environment.yml  evaluator.py  ingest.py  loader.py  main.py  pyproject.toml  recommender.py  requirements.txt  setup.cfg
data/: article_ingest.py  ingest.py  init.py  interaction_seeder.py  loader.py
src/rscb/: __init__.py  evaluator.py  helper.py  recommender_engine.py
src/rscb/algorithms/: __init__.py  abstract_algorithm.py  tfidf.py
src/rscb/kabarinformatika/: medium.py  processing.py  seeder.py
