[metadata]
name = rscb
version = 2022.1
author = Rohmad F. and Kabar Informatika contributors
author_email = rohmad.f@students.amikom.ac.id
description = A package that contains the code from Recommender System Content-based Filtering thesis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/kabar-informatika-engine/recsys-engine-contentbased
project_urls =
    Bug Tracker = https://gitlab.com/kabar-informatika-engine/recsys-engine-contentbased/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    numpy>=1.22.0
    pandas>=1.3.5
    nltk>=3.6.7
    scipy>=1.7.3
    scikit-learn>=1.0.2

[options.packages.find]
where = src